<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/action_bar_title" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width55"
        android:background="#fff">

        <TextView
            android:id="@+id/text_switch"
            style="@style/text_18_464646"
            android:layout_width="@dimen/width90"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width40"
            android:text="@string/text_switch" />

        <Button
            android:id="@+id/btn_on"
            android:layout_width="@dimen/width60"
            android:layout_height="@dimen/width30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width10"
            android:layout_toRightOf="@id/text_switch"
            android:background="@drawable/btn_blue_bg"
            android:text="@string/on"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_off"
            android:layout_width="@dimen/width60"
            android:layout_height="@dimen/width30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width10"
            android:layout_toRightOf="@id/btn_on"
            android:background="@drawable/btn_blue_bg"
            android:text="@string/off"
            android:textColor="#fff" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width60"
        android:background="#fff">

        <TextView
            android:id="@+id/text_over_p"
            style="@style/text_18_464646"
            android:layout_width="@dimen/width90"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width40"
            android:text="@string/over_protect" />

        <Button
            android:id="@+id/btn_p_on"
            android:layout_width="@dimen/width60"
            android:layout_height="@dimen/width30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width10"
            android:layout_toRightOf="@id/text_over_p"
            android:background="@drawable/btn_blue_bg"
            android:text="@string/on"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_p_off"
            android:layout_width="@dimen/width60"
            android:layout_height="@dimen/width30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width10"
            android:layout_toRightOf="@id/btn_p_on"
            android:background="@drawable/btn_blue_bg"
            android:text="@string/off"
            android:textColor="#fff" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#e5e5e5" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width70"
        android:background="#fff">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width30">
            <TextView
                android:id="@+id/over_v"
                style="@style/text_18_464646"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/over_v"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/text_over_v"
                style="@style/text_18_464646"
                android:layout_toRightOf="@+id/over_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/over_v" />

            <TextView
                android:id="@+id/text_over_v_tip"
                style="@style/text_15_464646"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_over_v"
                android:text="@string/over_protect_tips" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_v"
            android:layout_width="@dimen/width120"
            android:layout_height="@dimen/width40"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textsize16"
            android:layout_marginLeft="@dimen/width175"
            android:inputType="number"

            android:hint="设定过压值" />

        <Button
            android:id="@+id/btn_v_ok"
            android:layout_width="@dimen/width50"
            android:layout_height="@dimen/width30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width10"
            android:layout_toRightOf="@id/edit_v"
            android:background="@drawable/btn_ok_bg"
            android:text="@string/ok"
            android:textColor="#fff" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#e5e5e5" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width70"
        android:background="#fff">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width30"
            >
            <TextView
                android:id="@+id/under_v"
                style="@style/text_18_464646"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/under_v"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/text_under_v"
                style="@style/text_18_464646"
                android:layout_toRightOf="@+id/under_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/under_v" />

            <TextView
                android:id="@+id/text_under_v_tip"
                style="@style/text_15_464646"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_under_v"
                android:text="@string/under_protect_tips" />

        </RelativeLayout>



        <EditText
            android:id="@+id/edit_under_v"
            android:layout_width="@dimen/width120"
            android:layout_height="@dimen/width40"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textsize16"
            android:layout_marginLeft="@dimen/width175"
            android:inputType="number"

            android:hint="设定欠压值" />

        <Button
            android:id="@+id/btn_under_v_ok"
            android:layout_width="@dimen/width50"
            android:layout_height="@dimen/width30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width10"
            android:layout_toRightOf="@id/edit_under_v"
            android:background="@drawable/btn_ok_bg"
            android:text="@string/ok"
            android:textColor="#fff" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#e5e5e5" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width70"
        android:background="#fff">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/width30"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/over_a"
                style="@style/text_18_464646"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/over_a"
                android:visibility="gone"/>

            <TextView
            android:id="@+id/text_over_a"
            style="@style/text_18_464646"
            android:layout_toRightOf="@+id/over_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/over_a" />

            <TextView
                android:id="@+id/text_over_a_tip"
                style="@style/text_15_464646"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_over_a"
                android:text="@string/over_a_tips" />


        </RelativeLayout>


        <EditText
            android:id="@+id/edit_a"
            android:layout_width="@dimen/width120"
            android:layout_height="@dimen/width40"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textsize16"
            android:layout_marginLeft="@dimen/width175"
            android:inputType="number"

            android:hint="设定过流值" />

        <Button
            android:id="@+id/btn_a_ok"
            android:layout_width="@dimen/width50"
            android:layout_height="@dimen/width30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width10"
            android:layout_toRightOf="@id/edit_a"
            android:background="@drawable/btn_ok_bg"
            android:text="@string/ok"
            android:textColor="#fff" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#e5e5e5" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width70"
        android:background="#fff">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width30">
            <TextView
                android:id="@+id/over_power"
                style="@style/text_18_464646"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/over_power"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/text_over_power"
                style="@style/text_18_464646"
                android:layout_toRightOf="@+id/over_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/over_power" />

            <TextView
                android:id="@+id/text_over_power_tip"
                style="@style/text_15_464646"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_over_power"
                android:text="@string/over_power_tips" />


        </RelativeLayout>


        <EditText
            android:id="@+id/edit_power"
            android:layout_width="@dimen/width120"
            android:layout_height="@dimen/width40"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textsize16"
            android:layout_marginLeft="@dimen/width175"
            android:inputType="number"

            android:hint="设定过载值" />

        <Button
            android:id="@+id/btn_power_ok"
            android:layout_width="@dimen/width50"
            android:layout_height="@dimen/width30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width10"
            android:layout_toRightOf="@id/edit_power"
            android:background="@drawable/btn_ok_bg"

            android:text="@string/ok"
            android:textColor="#fff" />
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#e5e5e5" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width70"
        android:background="#fff">
        <TextView
            android:id="@+id/elc_text"
            style="@style/text_18_464646"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width30"
            android:text="@string/ele" />

        <TextView
            android:id="@+id/text_elc"
            style="@style/text_18_464646"
            android:layout_toRightOf="@+id/elc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width5"
            android:text="@string/test_number" />

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="@dimen/width60"
            android:layout_height="@dimen/width30"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/text_elc"
            android:layout_marginLeft="@dimen/width40"
            android:background="@drawable/btn_ok_bg"
            android:text="@string/refresh"
            android:textColor="#fff" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">
        <TextView
            android:id="@+id/text_v_1"
            style="@style/text_18_464646"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width30"
            android:text="@string/text_v"/>

        <TextView
            android:id="@+id/text_v"
            style="@style/text_18_464646"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_v_1"
            android:layout_marginTop="@dimen/width10"
            android:layout_marginLeft="@dimen/width40"
            android:text="@string/test_number"/>

        <TextView
            android:id="@+id/text_a_1"
            style="@style/text_18_464646"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/text_v_1"
            android:layout_marginLeft="@dimen/width65"
            android:text="@string/text_a" />

        <TextView
            android:id="@+id/text_a"
            style="@style/text_18_464646"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_a_1"
            android:layout_marginTop="@dimen/width10"
            android:layout_alignLeft="@+id/text_a_1"
            android:gravity="center"
            android:text="@string/test_number" />
        <TextView
            android:id="@+id/text_p_1"
            style="@style/text_18_464646"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/width30"
            android:text="@string/text_p" />
        <TextView
            android:id="@+id/text_p"
            style="@style/text_18_464646"
            android:layout_width="wrap_content"
            android:layout_alignLeft="@+id/text_p_1"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_p_1"
            android:gravity="center"
            android:layout_marginTop="@dimen/width10"
            android:text="@string/test_number" />


    </RelativeLayout>



</LinearLayout>